# KeyQuest

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.html  README.md  codex-exec-diagnostics.txt  keyquest.pyw  pyproject.toml
.codex/: config.toml
.githooks/: pre-push
Sentences/: English Sentences.txt  Spanish Sentences.txt  manifest.json
games/: GAME_TEMPLATE.py  base_game.py  hangman.py  letter_fall.py  word_typing.py
modules/: about_menu.py  dashboard_manager.py  dialog_manager.py  key_analytics.py  keyboard_explorer.py  keyquest_app.py  lesson_intro_mode.py  lesson_manager.py  lesson_mode.py  notifications.py  quest_manager.py  results_formatter.py  sentences_manager.py  speech_format.py  speech_manager.py  state_manager.py  test_modes.py  tutorial_mode.py  update_controller.py  update_manager.py
site/: changelog.html  index.html
tests/: run_full_update_sim.py  run_local_updater_integration.py  run_tests.ps1  test_about_menu.py  test_base_game.py  test_dashboard_manager.py  test_escape_policy.py  test_hangman.py  test_lesson_mode.py  test_letter_fall.py  test_menu_handler.py  test_release_bump.py  test_sentences_manager.py  test_sentences_manifest.py  test_spanish_content.py  test_speech_manager.py  test_state_manager.py  test_test_modes.py  test_update_idle_logic.py  test_update_manager.py  update_smoke_test.py  updater_fixture_app.py
tools/: codex_exec_diagnostics.ps1  env_bootstrap.ps1  release.ps1  run_local_updater_integration.ps1  run_quality_checks.ps1  ship_updates.ps1
ui/: render_about.py  render_test_setup.py
(+26 files in other folders)
